--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  background-color: rgb(128, 128, 128);
+}
+.game-board {
+  width: 30rem;
+  height: 30rem;
+  background-color: lightgray;
+  border: 4px double gray;
+  display: grid;
+  grid-template-columns: 10rem 10rem 10rem;
+  grid-template-rows: 10rem 10rem 10rem;
 }
 
-.App-link {
-  color: #61dafb;
+.turn {
+  margin-left: 9rem;
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square {
+  width: 9.9rem;
+  height: 9.9rem;
+  border: 1px double gray;
+  font-size: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.square:hover {
+  cursor: pointer;
+}
+
+.square:active {
+  transform: scale(1.02);
 }
